Gallery at scale: add location/style/theme fields, multi-group filtering, reveal animations, OG meta defaults; update CMS config and docs

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,14 @@ title: "Huntersville Rock Art"
 description: "Custom-painted spirit rocks for birthdays, schools, and events in Huntersville, NC and nearby."
 url: "https://ethancboone.github.io"
 baseurl: "/huntersville-rock-painting"
+image:
+  path: "/assets/og.jpg"
+  alt: "Custom-painted spirit rocks in Huntersville, NC"
+
+twitter_username: ""
+social:
+  name: "Huntersville Rock Art"
+  links: []
 
 collections:
   gallery:
