--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,8 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.2'
-      - run: |
-          gem install bundler jekyll jekyll-sitemap jekyll-seo-tag
-          jekyll build -d _site
+          bundler-cache: true
+      - run: bundle exec jekyll build -d _site --config _config.yml
       - uses: actions/upload-pages-artifact@v3
         with:
           path: _site
