Switch Static CMS to Netlify git-gateway; add Netlify Identity widget; add netlify.toml and .ruby-version for Netlify build

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,8 +1,6 @@
 backend:
-  name: github
-  repo: ethancboone/huntersville-rock-painting
+  name: git-gateway
   branch: main
-  base_url: https://api.github.com
 
 media_folder: "assets/gallery"
 public_folder: "/assets/gallery"
