Gallery taxonomy: birthday/school-spirit/groups; add FB/IG links + colorful theme; fix CSP font-src; add three category pages, remove old ones.

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,8 @@ twitter_username: ""
 social:
   name: "Huntersville Rock Art"
   links: []
+  facebook: "https://www.facebook.com/your-page"
+  instagram: "https://www.instagram.com/your-handle"
 
 collections:
   gallery:
