--- a/_data/gallery_categories.yml
+++ b/_data/gallery_categories.yml
@@ -1,14 +1,7 @@
 categories:
-  - id: birthdays
-    title: Birthday Rocks
-  - id: house-numbers
-    title: House Numbers
-  - id: yard-art
-    title: Yard Art
-  - id: memorials
-    title: Memorials
-  - id: inspirational-quotes
-    title: Inspirational Quotes
-  - id: seasonal
-    title: Seasonal
-
+  - id: birthday
+    title: Birthday
+  - id: school-spirit
+    title: School Spirit
+  - id: groups
+    title: Groups
