Gallery uniform aspect (4:3) without cropping; remove mint/teal variables; set OG image to an existing gallery photo.

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: "Custom-painted spirit rocks for birthdays, schools, and events in 
 url: "https://ethancboone.github.io"
 baseurl: "/huntersville-rock-painting"
 image:
-  path: "/assets/og.jpg"
+  path: "/assets/gallery/0CD90A13-43D1-4766-8B78-2765071B023C.JPG"
   alt: "Custom-painted spirit rocks in Huntersville, NC"
 
 twitter_username: ""
